--- a/pgr03AdocaoResponsavel/src/main/java/br/com/ifba/app/view/Main.form
+++ b/pgr03AdocaoResponsavel/src/main/java/br/com/ifba/app/view/Main.form
@@ -75,8 +75,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnRodrigo">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Rodrigo"/>
+        <Property name="text" type="java.lang.String" value="Gerenciamento Animais (Rodrigo)"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRodrigoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnJefferson">
       <Properties>
