--- a/pgr03AdocaoResponsavel/src/main/java/br/com/ifba/app/view/Main.form
+++ b/pgr03AdocaoResponsavel/src/main/java/br/com/ifba/app/view/Main.form
@@ -80,7 +80,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnJefferson">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Jefferson"/>
+        <Property name="text" type="java.lang.String" value="Gest&#xe3;o de Usu&#xe1;rios (Jefferson)"/>
       </Properties>
     </Component>
   </SubComponents>
