--- a/pgr03AdocaoResponsavel/src/main/java/br/com/ifba/animal/view/AnimalView.form
+++ b/pgr03AdocaoResponsavel/src/main/java/br/com/ifba/animal/view/AnimalView.form
@@ -26,39 +26,29 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="643" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="112" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="btnAdicionarAnimal" max="32767" attributes="0"/>
-                      <Component id="btnEditarAnimal" min="-2" pref="164" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="101" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="btnAdicionarAnimal" max="32767" attributes="0"/>
+                          <Component id="btnEditarAnimal" alignment="1" min="-2" pref="164" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="btnRemoverAnimal" alignment="1" min="-2" pref="164" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="btnRemoverAnimal" alignment="1" min="-2" pref="164" max="-2" attributes="0"/>
-                  <Component id="txtPesquisar" min="-2" pref="164" max="-2" attributes="0"/>
+                  <Component id="btnAtualizar" min="-2" pref="61" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="btnPesquisarPorEspecie" min="-2" pref="81" max="-2" attributes="0"/>
-              <EmptySpace pref="29" max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="lblPesquisar" min="-2" pref="188" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="92" max="-2" attributes="0"/>
+              <EmptySpace pref="74" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="44" max="32767" attributes="0"/>
-              <Component id="lblPesquisar" min="-2" pref="16" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+              <EmptySpace pref="66" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtPesquisar" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnPesquisarPorEspecie" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="btnAtualizar" min="-2" pref="42" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                       <Component id="btnAdicionarAnimal" min="-2" pref="49" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnEditarAnimal" min="-2" pref="44" max="-2" attributes="0"/>
@@ -151,23 +141,25 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Editar Animal"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditarAnimalActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnRemoverAnimal">
       <Properties>
         <Property name="text" type="java.lang.String" value="Remover Animal"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRemoverAnimalActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtPesquisar">
-    </Component>
-    <Component class="javax.swing.JButton" name="btnPesquisarPorEspecie">
+    <Component class="javax.swing.JButton" name="btnAtualizar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="\ud83d\udd0d" containsInvalidXMLChars="true"/>
+        <Property name="text" type="java.lang.String" value="\ud83d\udd04" containsInvalidXMLChars="true"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="lblPesquisar">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Pesquisar Animal por Esp&#xe9;cie"/>
-      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAtualizarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
