--- a/pgr03AdocaoResponsavel/src/main/java/br/com/ifba/lar_temporario/view/LarTemporarioView.form
+++ b/pgr03AdocaoResponsavel/src/main/java/br/com/ifba/lar_temporario/view/LarTemporarioView.form
@@ -69,13 +69,14 @@
         <Component class="javax.swing.JTable" name="jTableExibirLarTemporario">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="0">
+              <Table columnCount="7" rowCount="0">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
                 <Column editable="false" title="Data_Cadastro" type="java.lang.Object"/>
                 <Column editable="false" title="Diponibilidade" type="java.lang.Boolean"/>
                 <Column editable="false" title="Observa&#xe7;&#xf5;es" type="java.lang.Object"/>
                 <Column editable="false" title="Qtd max.Animais" type="java.lang.Object"/>
                 <Column editable="false" title="ID Adotante" type="java.lang.Object"/>
+                <Column editable="false" title="ID Animal" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
